# developerStartSpringboot

./: .gitignore  Cargo.toml  README.md  apt-ftparchive.conf  index.html  install-deb.sh  public.key
.github/workflows/: build-deb-develop.yml  build-rpm-develop.yml  publish-deb-apt.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
pool/main/: developerstartspringboot_0.1.0-1_amd64.deb
src/: cli.rs  config.rs  constants.rs  interactive.rs  main.rs  ui.rs  utils.rs
src/base/: application.rs  core.rs  infrastructure.rs  mod.rs
src/generator/: files.rs  java.rs  mod.rs  pom.rs
template/3layer/: pom.xml
template/3layer/application/: pom.xml
template/3layer/application/src/main/java/your/domain/application/ports/repositories/: AdminRepository.java  UserEntityRepository.java
template/3layer/application/src/main/java/your/domain/application/ports/services/: PasswordService.java  TokenService.java
template/3layer/application/src/main/java/your/domain/application/usecases/: AuthenticateAdminUseCase.java  AuthenticateUserEntityUseCase.java  CreateUserEntityUseCase.java
template/3layer/core/: pom.xml
template/3layer/core/src/main/java/your/domain/core/domain/entities/: Admin.java  UserEntity.java
template/3layer/core/src/main/java/your/domain/core/domain/valueobjects/: AuthenticationResult.java
template/3layer/core/src/main/resources/: application.properties
template/3layer/infrastructure/: pom.xml
template/3layer/infrastructure/src/main/java/your/domain/infrastructure/: AppNameCleanApplication.java
template/3layer/infrastructure/src/main/java/your/domain/infrastructure/config/: BeanConfiguration.java
template/3layer/infrastructure/src/main/resources/: application.properties
template/3layer/infrastructure/src/main/resources/db/migration/postgres/: V01_01__insert_data_test.sql
template/3layer/infrastructure/src/test/java/dev/falae/api/: ApplicationTests.java
wix/: main.wxs
(+18 files in other folders)
