[package]
name = "developerStartSpringboot"
authors = ["erique.dev <contato@erique.dev>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Spring Boot project generator CLI"
repository = "https://github.com/EriqueRocha/developerStartSpringboot"

[[bin]]
name = "dss"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.deb]
maintainer = "erique.dev <contato@erique.dev>"
section = "utils"
priority = "optional"

[package.metadata.rpm]
package = "developerStartSpringboot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
dss = { path = "/usr/bin/dss" }
